--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
    <br>
   <div style="text-align: center;">
-    <a href="https://suheri99.github.io/BARCODEKELAS-X/" style="color: orange;">BARKODE RUANG 16</a>
+    <a href="https://suheri99.github.io/BARCODER.16/" style="color: orange;">BARKODE RUANG 16</a>
   </div>
   
 
